--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/s-sasaki-0529/photo-share-api/issues"
   },
-  "homepage": "https://github.com/s-sasaki-0529/photo-share-api#readme"
+  "homepage": "https://github.com/s-sasaki-0529/photo-share-api#readme",
+  "dependencies": {
+    "apollo-server": "^3.10.2",
+    "graphql": "^16.6.0"
+  }
 }
