--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[初めてのGraphQL](https://www.oreilly.co.jp/books/9784873118932/) のハンズオンリポジトリ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -e js,json,graphql"
+    "start": "tsx watch index.ts"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "graphql": "^16.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "tsx": "^3.9.0",
+    "typescript": "^4.8.4"
   }
 }
