--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/s-sasaki-0529/photo-share-api#readme",
   "dependencies": {
-    "apollo-server": "^3.10.2",
-    "graphql": "^16.6.0"
+    "apollo-server-express": "^3.10.2",
+    "express": "^4.18.1",
+    "graphql": "^16.6.0",
+    "graphql-playground-middleware-express": "^1.7.23"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
