--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "apollo-server-express": "^3.10.2",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
-    "graphql-playground-middleware-express": "^1.7.23"
+    "graphql-playground-middleware-express": "^1.7.23",
+    "mongodb": "^4.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
