--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mongodb": "^4.10.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.2",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20",
     "tsx": "^3.9.0",
     "typescript": "^4.8.4"
